# rise-contact_graspnet

./: README.md  SOLUTION.md
contact_graspnet/: ros_client_exmaple.py  ros_node.py
launch/: grasp_planner.launch
msg/: ContactGrasp.msg
rise_contact_graspnet2/: .gitignore  package.xml  setup.cfg  setup.py
rise_contact_graspnet2/contact_graspnet/: contact_grasp_estimator.py  inference_no_gui.py  ros2_client_example.py  ros2_node.py  ros_client_example.py  ros_node.py
rise_contact_graspnet2/docker/: contact_grasp_ros2ws.Dockerfile  tensorflow_base.Dockerfile  test_ros2.Dockerfile  tf_base.Dockerfile
rise_contact_graspnet2/launch/: grasp_planner.launch  grasp_planner.launch.py  params.cfg
rise_contact_graspnet2/pointnet2/tf_ops/sampling/: 1.pkl
rise_contact_msg2/: CMakeLists.txt  package.xml
